--- a/templates/item/Custom Weapon-sheet.html
+++ b/templates/item/Custom Weapon-sheet.html
@@ -1212,7 +1212,7 @@
                                     Barrel Length (mm)
                                 </td>
                                 <td style="line-height: 27.5px">
-                                    <input type="number" name="data.firearmDesign.barrelLength" value="{{data.data.firearmDesign.barrelLength}}" data-dtype="Number"/> mm / {{mmToIn data.data.firearmDesign.barrelLength 10}} in
+                                    <input type="number" name="data.firearmDesign.barrelLength" value="{{data.data.firearmDesign.barrelLength}}" data-dtype="Number"/>
                                 </td>
                                 <td class="question-container" id="barrel-length">
                                     <div class="question-button">
@@ -1243,6 +1243,242 @@
 
                         </table>
 
+
+                        <h2 class="bold" style="text-align: center; margin-top: 20px">Projectile</h2>
+                        <table>
+                            <tr class="design-row">
+                                <td style="width: 150px">
+                                    Powder Type
+                                </td>
+                                <td>
+                                    <select name="data.firearmDesign.powder">
+                                        {{#select data.data.firearmDesign.powder}}
+                                        <option value="black">Black Powder (TL 3)</option>
+                                        {{#ifCond  data.data.tl '>=' 6 }}
+                                        <option value="smokeless">Smokeless Powder (TL 6)</option>
+                                        {{/ifCond}}
+                                        {{#ifCond  data.data.tl '>=' 9 }}
+                                        <option value="etc">Electrothermal Chemical (TL 9)</option>
+                                        {{/ifCond}}
+                                        {{#ifCond  data.data.tl '>=' 10 }}
+                                        <option value="etk">Electrothermal Kinetic (TL 10)</option>
+                                        {{/ifCond}}
+                                        {{/select}}
+                                    </select>
+                                </td>
+                                <td class="question-container" id="powder-type">
+                                    <div class="question-button">
+                                        <i class="fas fa-question"></i>
+                                    </div>
+                                </td>
+                            </tr>
+
+                            <tr class="design-row">
+                                <td style="line-height: 27.5px">
+                                    Projectile Calibre (mm)
+                                </td>
+                                <td style="line-height: 27.5px">
+                                    <input type="number" name="data.firearmDesign.projectileCalibre" value="{{data.data.firearmDesign.projectileCalibre}}" data-dtype="Number"/>
+                                </td>
+                                <td class="question-container" id="projectile-calibre">
+                                    <div class="question-button">
+                                        <i class="fas fa-question"></i>
+                                    </div>
+                                </td>
+                            </tr>
+
+                            <tr class="design-row">
+                                <td style="line-height: 27.5px">
+                                    Projectile Aspect Ratio
+                                </td>
+                                <td style="line-height: 27.5px">
+                                    <input type="number" name="data.firearmDesign.projectileAspectRatio" value="{{data.data.firearmDesign.projectileAspectRatio}}" data-dtype="Number"/>
+                                </td>
+                                <td class="question-container" id="projectile-aspect">
+                                    <div class="question-button">
+                                        <i class="fas fa-question"></i>
+                                    </div>
+                                </td>
+                            </tr>
+
+                            <tr class="design-row">
+                                <td style="line-height: 27.5px">
+                                    Projectile Mass (grains)
+                                </td>
+                                <td style="line-height: 27.5px">
+                                    <input type="number" name="data.firearmDesign.projectileMass" value="{{data.data.firearmDesign.projectileMass}}" data-dtype="Number"/>
+                                </td>
+                                <td class="question-container" id="projectile-mass">
+                                    <div class="question-button">
+                                        <i class="fas fa-question"></i>
+                                    </div>
+                                </td>
+                            </tr>
+
+                            <tr class="design-row">
+                                <td style="line-height: 27.5px">
+                                    Projectile Density
+                                </td>
+                                <td style="line-height: 27.5px">
+                                    {{data.data.firearmDesign.projectileDensity}}
+                                </td>
+                                <td class="question-container" id="projectile-density">
+                                    <div class="question-button">
+                                        <i class="fas fa-question"></i>
+                                    </div>
+                                </td>
+                            </tr>
+
+                            <tr class="design-row">
+                                <td style="line-height: 27.5px">
+                                    Chamber Bore (mm)
+                                </td>
+                                <td style="line-height: 27.5px">
+                                    <input type="number" name="data.firearmDesign.chamberBore" value="{{data.data.firearmDesign.chamberBore}}" data-dtype="Number"/>
+                                </td>
+                                <td class="question-container" id="chamber-bore">
+                                    <div class="question-button">
+                                        <i class="fas fa-question"></i>
+                                    </div>
+                                </td>
+                            </tr>
+
+                            <tr class="design-row">
+                                <td style="line-height: 27.5px">
+                                    Case Length (mm)
+                                </td>
+                                <td style="line-height: 27.5px">
+                                    <input type="number" name="data.firearmDesign.caseLength" value="{{data.data.firearmDesign.caseLength}}" data-dtype="Number"/>
+                                </td>
+                                <td class="question-container" id="case-length">
+                                    <div class="question-button">
+                                        <i class="fas fa-question"></i>
+                                    </div>
+                                </td>
+                            </tr>
+
+                            <tr class="design-row">
+                                <td style="width: 150px">
+                                    Cartridge Type
+                                </td>
+                                <td>
+                                    <select name="data.firearmDesign.cartridgeType">
+                                        {{#select data.data.firearmDesign.cartridgeType}}
+                                        <option value="pistol">Pistol</option>
+                                        <option value="rifle">Rifle</option>
+                                        <option value="custom">Custom</option>
+                                        {{/select}}
+                                    </select>
+                                </td>
+                                <td class="question-container" id="cartridge-type">
+                                    <div class="question-button">
+                                        <i class="fas fa-question"></i>
+                                    </div>
+                                </td>
+                            </tr>
+
+                            <tr class="design-row">
+                                <td style="line-height: 27.5px">
+                                    Burn Length
+                                </td>
+                                <td>
+                                    {{#if (eq data.data.firearmDesign.cartridgeType "custom")}}
+                                        <input type="range" min="0.01" max="1" step="0.01" name="data.firearmDesign.burnRatio" value="{{data.data.firearmDesign.burnRatio}}" data-dtype="Number"> / {{data.data.firearmDesign.burnRatio}} mm / {{mmToIn data.data.firearmDesign.burnRatio 10}} in
+                                    {{else}}
+                                        {{data.data.firearmDesign.burnLength}} / {{data.data.firearmDesign.burnRatio}} mm / {{mmToIn data.data.firearmDesign.burnRatio 10}} in
+                                    {{/if}}
+                                </td>
+                                <td class="question-container" id="burn-length">
+                                    <div class="question-button">
+                                        <i class="fas fa-question"></i>
+                                    </div>
+                                </td>
+                            </tr>
+
+                            <tr class="design-row">
+                                <td style="line-height: 27.5px">
+                                    Chamber Pressure (psi)
+                                </td>
+                                <td style="line-height: 27.5px">
+                                    <input type="number" name="data.firearmDesign.chamberPressure" value="{{data.data.firearmDesign.chamberPressure}}" data-dtype="Number"/> psi : {{chamberPressureExample data.data.firearmDesign.chamberPressure data.data.firearmDesign.powder}}
+                                </td>
+                                <td class="question-container" id="chamber-pressure">
+                                    <div class="question-button">
+                                        <i class="fas fa-question"></i>
+                                    </div>
+                                </td>
+                            </tr>
+                        </table>
+
+                        <h2 class="bold" style="text-align: center; margin-top: 20px">Magazine</h2>
+                        <table>
+                            <tr class="design-row">
+                                <td style="width: 150px">
+                                    Magazine Style
+                                </td>
+                                <td>
+                                    <select name="data.firearmDesign.magazineStyle">
+                                        {{#select data.data.firearmDesign.magazineStyle}}
+                                        <option value="none">None</option>
+                                        <option value="internal">Internal (TL 3)</option>
+                                        {{#ifCond  data.data.tl '>=' 6 }}
+                                        <option value="standard">Standard (TL 6)</option>
+                                        <option value="extended">Extended (TL 6)</option>
+                                        <option value="drum">Drum (TL 6)</option>
+                                        {{/ifCond}}
+                                        {{#ifCond  data.data.tl '>=' 7 }}
+                                        <option value="highDensity">High Density (TL 7)</option>
+                                        {{/ifCond}}
+                                        {{/select}}
+                                    </select>
+                                </td>
+                                <td class="question-container" id="magazine-style">
+                                    <div class="question-button">
+                                        <i class="fas fa-question"></i>
+                                    </div>
+                                </td>
+                            </tr>
+
+                            <tr class="design-row">
+                                <td style="width: 150px">
+                                    Magazine Material
+                                </td>
+                                <td>
+                                    <select name="data.firearmDesign.magazineMaterial">
+                                        {{#select data.data.firearmDesign.magazineMaterial}}
+                                        <option value="internal">Steel (TL 3)</option>
+                                        {{#ifCond  data.data.tl '>=' 6 }}
+                                        <option value="drum">Alloy (TL 6)</option>
+                                        {{/ifCond}}
+                                        {{#ifCond  data.data.tl '>=' 7 }}
+                                        <option value="plastic">Plastic (TL 7)</option>
+                                        {{/ifCond}}
+                                        {{/select}}
+                                    </select>
+                                </td>
+                                <td class="question-container" id="magazine-material">
+                                    <div class="question-button">
+                                        <i class="fas fa-question"></i>
+                                    </div>
+                                </td>
+                            </tr>
+
+                            <tr class="design-row">
+                                <td style="line-height: 27.5px">
+                                    Magazine Capacity
+                                </td>
+                                <td style="line-height: 27.5px">
+                                    <input type="number" name="data.firearmDesign.capacity" value="{{data.data.firearmDesign.capacity}}" data-dtype="Number"/>
+                                </td>
+                                <td class="question-container" id="magazine-capacity">
+                                    <div class="question-button">
+                                        <i class="fas fa-question"></i>
+                                    </div>
+                                </td>
+                            </tr>
+                        </table>
+
+
                         <h2 class="bold" style="text-align: center; margin-top: 20px">Tweaks</h2>
                         <table>
                             <tr class="design-row">
@@ -1253,6 +1489,20 @@
                                     <input type="range" min="0.85" max="2" step="0.05" name="data.firearmDesign.weightTweak" value="{{data.data.firearmDesign.weightTweak}}" data-dtype="Number">
                                 </td>
                                 <td class="question-container" id="firearm-weight-tweak">
+                                    <div class="question-button">
+                                        <i class="fas fa-question"></i>
+                                    </div>
+                                </td>
+                            </tr>
+
+                            <tr class="design-row">
+                                <td style="line-height: 27.5px">
+                                    Fit to Owner
+                                </td>
+                                <td>
+                                    <input type="checkbox" name="data.firearmDesign.fitToOwner" {{checked data.data.firearmDesign.fitToOwner}} data-dtype="Boolean"/>
+                                </td>
+                                <td class="question-container" id="fit-to-owner">
                                     <div class="question-button">
                                         <i class="fas fa-question"></i>
                                     </div>
