Added projectile density and material display to custom weapons

--- a/templates/item/Custom Weapon-sheet.html
+++ b/templates/item/Custom Weapon-sheet.html
@@ -1317,10 +1317,10 @@
 
                             <tr class="design-row">
                                 <td style="line-height: 27.5px">
-                                    Projectile Density
+                                    Resulting Projectile Density and Sample Materials
                                 </td>
                                 <td style="line-height: 27.5px">
-                                    {{data.data.firearmDesign.projectileDensity}}
+                                    {{round data.data.firearmDesign.projectileDensity 100}} g/cm^2 : {{data.data.firearmDesign.projectileMaterials}}
                                 </td>
                                 <td class="question-container" id="projectile-density">
                                     <div class="question-button">
