--- a/templates/item/Custom Weapon-sheet.html
+++ b/templates/item/Custom Weapon-sheet.html
@@ -1658,9 +1658,37 @@
                                     Baseline Weight
                                 </td>
                                 <td>
-                                    Unloaded: {{round data.data.firearmDesign.weight 100}} Per Shot: {{round data.data.firearmDesign.baseWeightPerShot 100}} Ammunition: {{round data.data.firearmDesign.ammoWeight 100}} Loaded: {{round data.data.weight 100}}
+                                    Unloaded: {{round data.data.firearmDesign.weight 100}} Per Shot: {{round data.data.firearmDesign.baseWeightPerShot 100}} Ammunition: {{round data.data.firearmDesign.ammoWeight 100}} Loaded: {{round this.data.data.firearmDesign.loadedWeight 100}}
                                 </td>
                                 <td class="question-container" id="weight-output">
+                                    <div class="question-button">
+                                        <i class="fas fa-question"></i>
+                                    </div>
+                                </td>
+                            </tr>
+
+                            <tr class="design-row">
+                                <td style="line-height: 27.5px">
+                                    Baseline ST
+                                </td>
+                                <td>
+                                    {{round data.data.firearmDesign.st 100}} rounded to {{data.data.firearmDesign.stOutput}}
+                                </td>
+                                <td class="question-container" id="st-output">
+                                    <div class="question-button">
+                                        <i class="fas fa-question"></i>
+                                    </div>
+                                </td>
+                            </tr>
+
+                            <tr class="design-row">
+                                <td style="line-height: 27.5px">
+                                    Baseline RcL
+                                </td>
+                                <td>
+                                    {{round data.data.firearmDesign.rclRaw 100}} rounded to {{data.data.firearmDesign.rcl}}
+                                </td>
+                                <td class="question-container" id="rcl-output">
                                     <div class="question-button">
                                         <i class="fas fa-question"></i>
                                     </div>
