#8 Added range and velocity calculations and output

--- a/templates/item/Custom Weapon-sheet.html
+++ b/templates/item/Custom Weapon-sheet.html
@@ -1683,6 +1683,20 @@
 
                             <tr class="design-row">
                                 <td style="line-height: 27.5px">
+                                    Baseline Range and Velocity
+                                </td>
+                                <td>
+                                    {{data.data.firearmDesign.halfRange}} / {{data.data.firearmDesign.maxRange}} : {{data.data.firearmDesign.yardsPerSecond}} yards per second
+                                </td>
+                                <td class="question-container" id="range-output">
+                                    <div class="question-button">
+                                        <i class="fas fa-question"></i>
+                                    </div>
+                                </td>
+                            </tr>
+
+                            <tr class="design-row">
+                                <td style="line-height: 27.5px">
                                     Baseline RcL
                                 </td>
                                 <td>
