#8 Tweaked some wording

--- a/templates/item/Custom Weapon-sheet.html
+++ b/templates/item/Custom Weapon-sheet.html
@@ -1269,7 +1269,7 @@
                         </table>
 
 
-                        <h2 class="bold" style="text-align: center; margin-top: 20px">Projectile</h2>
+                        <h2 class="bold" style="text-align: center; margin-top: 20px">Cartridge</h2>
                         <table>
                             <tr class="design-row">
                                 <td style="width: 150px">
